# psycholinguistic_text_analyzer

./: .gitignore  README.md  entropy_engine.py  main.py  requirements.txt
api/: compare_routes.py  routes.py
cpp_core/: CMakeLists.txt  build_release.bat  setup.py
cpp_core/include/: abjad_engine.h  ar_bpv_table.h  bpv_table.h  compare_engine.h  cyrillic_engine.h  ko_bpv_table.h  ko_engine.h  micro_analyzer.h  pipeline.h  ru_bpv_table.h  thread_pool.h  types.h  window_engine.h
cpp_core/src/: abjad_analyzer.cpp  bindings.cpp  compare_engine.cpp  cyrillic_analyzer.cpp  ko_analyzer.cpp  micro_analyzer.cpp  pipeline.cpp  thread_pool.cpp  window_engine.cpp
database/: schema.py
dissonance/: engine.py
language/: registry.py  router.py
macro_layer/: ar_clusters.py  de_clusters.py  es_clusters.py  fa_clusters.py  fr_clusters.py  ja_clusters.py  ko_clusters.py  multilingual_analyzer.py  ru_clusters.py  semantic_analyzer.py  zh_clusters.py
micro_layer/: ar_analyzer.py  base_analyzer.py  cpp_analyzer.py  de_analyzer.py  es_analyzer.py  fr_analyzer.py  ja_analyzer.py  ja_romaji_bridge.py  ko_analyzer.py  lexical_affinity.py  orthographic_analyzer.py  ru_analyzer.py  somatic_engine.py  zh_analyzer.py
templates/: index.html
tokenizer/: rolling_window.py
